# playbot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  README.md  config.toml.example  playbot.db
.beads/: issues.jsonl  playbot.db
.github/workflows/: ci.yml
src/: config.rs  db.rs  genius.rs  lyrics.rs  main.rs  spotify.rs  tui.rs
