[package]
name = "playbot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
lyric_finder = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
ratatui = "0.29"
crossterm = "0.28"
